gcc/testsuite/rust/rustc/ui/error-codes/E0416.rs
fn main() {
    match (1, 2) {
        (x, x) => {} // { dg-error ".E0416." "" { target *-*-* } }
    }
}

